Fixed off center captions in adventure.

--- a/static/styles/caption-labels.css
+++ b/static/styles/caption-labels.css
@@ -256,15 +256,18 @@
 */
 
 .caption-label-3d {
-    transform: translate3d(-50%, 0, 0);
     will-change: transform;
     transition: transform 1.5s ease-in-out;
+}
+
+.caption-label-3d.center-banner {
+    transform: translateX(0);
 }
 
 .caption-label-3d:hover {
     animation-play-state: paused;
     /* default hover transform, if needed */
-    transform: translate3d(-50%, -20px, 0) scale3d(1.3, 1.3, 1);
+    transform: translate3d(0, 0px, 0) scale3d(1.3, 1.3, 1);
 }
 
 .caption-label-3d.left-banner:hover {
@@ -277,7 +280,16 @@
     transform: translate3d(-50%, 20px, 0) scale3d(1.3, 1.3, 1);
 }
 
+.caption-label-3d.center-banner:hover {
+    animation-play-state: paused;
+    transform: translate3d(0, 0, 0) scale3d(1.3, 1.3, 1);
+}
+
 /* change on hover mouse cursor */
 .caption-label-3d:hover {
     cursor: pointer;
+}
+
+.caption-label-3d.center-banner:hover {
+    cursor: default;
 }
